added prefect flow

--- a/app/training.ipynb
+++ b/app/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRACKING_SERVER_HOST = \"34.125.100.233\"\n",
+    "TRACKING_SERVER_HOST = \"34.125.110.54\"\n",
     "TRACKING_SERVER_PORT = \"5000\"\n",
     "DATA_PATH = \"/home/mouba/data/day.csv\"\n",
     "EXPERIMENT_NAME = \"bike-sharing-regression\""
@@ -89,7 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TRACKING_URI=f\"http://{TRACKING_SERVER_HOST}:{TRACKING_SERVER_PORT}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +198,7 @@
        "<Experiment: artifact_location='gs://mlflow-assignment-mj/bike-sharing-prediction/3', creation_time=1691221899736, experiment_id='3', last_update_time=1691221899736, lifecycle_stage='active', name='bike-sharing-regression', tags={}>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4057,7 +4066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4066,9 +4075,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def register_best_model(tracking_uri, experiment_name, model_registry_name):\n",
+    "    \n",
+    "    client = MlflowClient(tracking_uri=tracking_uri)\n",
+    "    \n",
+    "    experiment = client.get_experiment_by_name(experiment_name)\n",
+    "    best_run = client.search_runs(\n",
+    "        experiment_ids=experiment.experiment_id,\n",
+    "        run_view_type=ViewType.ACTIVE_ONLY,\n",
+    "        max_results=1,\n",
+    "        order_by=[\"metrics.rmse ASC\"]\n",
+    "    )[0]\n",
+    "    \n",
+    "    # register the best model\n",
+    "    run_id = best_run.info.run_id\n",
+    "    model_uri = f\"runs:/{run_id}/model\"\n",
+    "    model_rmse = best_run.data.metrics['rmse']\n",
+    "    model_details = mlflow.register_model(model_uri=model_uri, name=model_registry_name)\n",
+    "\n",
+    "    date = datetime.today().date()\n",
+    "    \n",
+    "    # transition of our best model in \"Production\"\n",
+    "    client.transition_model_version_stage(\n",
+    "        name=model_details.name,\n",
+    "        version=model_details.version,\n",
+    "        stage=\"Production\",\n",
+    "        archive_existing_versions=True\n",
+    "    )\n",
+    "    \n",
+    "    client.update_model_version(\n",
+    "        name=model_details.name,\n",
+    "        version=model_details.version,\n",
+    "        description=f\"The model version {model_details.version} was transitioned to Production on {date}\"\n",
+    "    )\n",
+    "    \n",
+    "    client.update_registered_model(\n",
+    "        name=model_details.name,\n",
+    "        description=f\"Current model version in production: {model_details.version}, rmse: {model_rmse}\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = \"random-forest-regressor\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Registered model 'random-forest-regressor' already exists. Creating a new version of this model...\n",
+      "2023/08/07 17:52:53 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation. Model name: random-forest-regressor, version 2\n",
+      "Created version '2' of model 'random-forest-regressor'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "register_best_model(TRACKING_URI, EXPERIMENT_NAME, model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Run: data=<RunData: metrics={'r2_score': 0.632749344020741,\n",
+       " 'rmse': 1187.4476830955357,\n",
+       " 'training_mean_absolute_error': 839.3195837883158,\n",
+       " 'training_mean_squared_error': 984957.1543581459,\n",
+       " 'training_r2_score': 0.7355399970094947,\n",
+       " 'training_root_mean_squared_error': 992.4500765066956,\n",
+       " 'training_score': 0.7355399970094947}, params={'dictvectorizer': 'DictVectorizer()',\n",
+       " 'dictvectorizer__dtype': \"<class 'numpy.float64'>\",\n",
+       " 'dictvectorizer__separator': '=',\n",
+       " 'dictvectorizer__sort': 'True',\n",
+       " 'dictvectorizer__sparse': 'True',\n",
+       " 'memory': 'None',\n",
+       " 'randomforestregressor': 'RandomForestRegressor(max_depth=9, '\n",
+       "                          'min_samples_leaf=9, min_samples_split=7,\\n'\n",
+       "                          '                      n_estimators=72, n_jobs=-1, '\n",
+       "                          'random_state=42)',\n",
+       " 'randomforestregressor__bootstrap': 'True',\n",
+       " 'randomforestregressor__ccp_alpha': '0.0',\n",
+       " 'randomforestregressor__criterion': 'squared_error',\n",
+       " 'randomforestregressor__max_depth': '9',\n",
+       " 'randomforestregressor__max_features': '1.0',\n",
+       " 'randomforestregressor__max_leaf_nodes': 'None',\n",
+       " 'randomforestregressor__max_samples': 'None',\n",
+       " 'randomforestregressor__min_impurity_decrease': '0.0',\n",
+       " 'randomforestregressor__min_samples_leaf': '9',\n",
+       " 'randomforestregressor__min_samples_split': '7',\n",
+       " 'randomforestregressor__min_weight_fraction_leaf': '0.0',\n",
+       " 'randomforestregressor__n_estimators': '72',\n",
+       " 'randomforestregressor__n_jobs': '-1',\n",
+       " 'randomforestregressor__oob_score': 'False',\n",
+       " 'randomforestregressor__random_state': '42',\n",
+       " 'randomforestregressor__verbose': '0',\n",
+       " 'randomforestregressor__warm_start': 'False',\n",
+       " 'steps': \"[('dictvectorizer', DictVectorizer()), ('randomforestregressor', \"\n",
+       "          'RandomForestRegressor(max_depth=9, min_samples_leaf=9, '\n",
+       "          'min_samples_split=7,\\n'\n",
+       "          '                      n_estimators=72, n_jobs=-1, '\n",
+       "          'random_state=42))]',\n",
+       " 'train_data': '/home/mouba/data/day.csv',\n",
+       " 'verbose': 'False'}, tags={'estimator_class': 'sklearn.pipeline.Pipeline',\n",
+       " 'estimator_name': 'Pipeline',\n",
+       " 'mlflow.log-model.history': '[{\"run_id\": \"79934c79a98f4932aade316cce6e61a0\", '\n",
+       "                             '\"artifact_path\": \"model\", \"utc_time_created\": '\n",
+       "                             '\"2023-08-05 08:25:30.916232\", \"flavors\": '\n",
+       "                             '{\"python_function\": {\"model_path\": \"model.pkl\", '\n",
+       "                             '\"predict_fn\": \"predict\", \"loader_module\": '\n",
+       "                             '\"mlflow.sklearn\", \"python_version\": \"3.9.17\", '\n",
+       "                             '\"env\": {\"conda\": \"conda.yaml\", \"virtualenv\": '\n",
+       "                             '\"python_env.yaml\"}}, \"sklearn\": '\n",
+       "                             '{\"pickled_model\": \"model.pkl\", '\n",
+       "                             '\"sklearn_version\": \"1.3.0\", '\n",
+       "                             '\"serialization_format\": \"cloudpickle\", \"code\": '\n",
+       "                             'null}}, \"model_uuid\": '\n",
+       "                             '\"aaf39b58805047a0a2dd587628e62f9c\", '\n",
+       "                             '\"mlflow_version\": \"2.5.0\"}, {\"run_id\": '\n",
+       "                             '\"79934c79a98f4932aade316cce6e61a0\", '\n",
+       "                             '\"artifact_path\": \"models\", \"utc_time_created\": '\n",
+       "                             '\"2023-08-05 08:25:34.169796\", \"flavors\": '\n",
+       "                             '{\"python_function\": {\"model_path\": \"model.pkl\", '\n",
+       "                             '\"predict_fn\": \"predict\", \"loader_module\": '\n",
+       "                             '\"mlflow.sklearn\", \"python_version\": \"3.9.17\", '\n",
+       "                             '\"env\": {\"conda\": \"conda.yaml\", \"virtualenv\": '\n",
+       "                             '\"python_env.yaml\"}}, \"sklearn\": '\n",
+       "                             '{\"pickled_model\": \"model.pkl\", '\n",
+       "                             '\"sklearn_version\": \"1.3.0\", '\n",
+       "                             '\"serialization_format\": \"cloudpickle\", \"code\": '\n",
+       "                             'null}}, \"model_uuid\": '\n",
+       "                             '\"0290cfbbb009449fa6ddb748678a36af\", '\n",
+       "                             '\"mlflow_version\": \"2.5.0\"}]',\n",
+       " 'mlflow.runName': 'debonair-newt-326',\n",
+       " 'mlflow.source.name': '/home/mouba/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/ipykernel_launcher.py',\n",
+       " 'mlflow.source.type': 'LOCAL',\n",
+       " 'mlflow.user': 'mouba',\n",
+       " 'model': 'rf'}>, info=<RunInfo: artifact_uri='gs://mlflow-assignment-mj/bike-sharing-prediction/3/79934c79a98f4932aade316cce6e61a0/artifacts', end_time=1691223937243, experiment_id='3', lifecycle_stage='active', run_id='79934c79a98f4932aade316cce6e61a0', run_name='debonair-newt-326', run_uuid='79934c79a98f4932aade316cce6e61a0', start_time=1691223928195, status='FINISHED', user_id='mouba'>, inputs=<RunInputs: dataset_inputs=[]>>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "experiment = client.get_experiment_by_name(EXPERIMENT_NAME)\n",
     "best_run = client.search_runs(\n",
@@ -4076,7 +4243,8 @@
     "    run_view_type=ViewType.ACTIVE_ONLY,\n",
     "    max_results=1,\n",
     "    order_by=[\"metrics.rmse ASC\"]\n",
-    ")[0]"
+    ")[0]\n",
+    "best_run"
    ]
   },
   {
@@ -4086,8 +4254,7 @@
    "outputs": [],
    "source": [
     "run_id = best_run.info.run_id\n",
-    "model_uri=f\"runs:/{run_id}/models\"\n",
-    "model_name = \"random-forest-regressor\""
+    "model_uri=f\"runs:/{run_id}/models\"\n"
    ]
   },
   {
