deploying prefect flow

--- a/app/training.ipynb
+++ b/app/training.ipynb
@@ -77,13 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRACKING_SERVER_HOST = \"34.125.110.54\"\n",
+    "TRACKING_SERVER_HOST = \"34.16.191.116\"\n",
     "TRACKING_SERVER_PORT = \"5000\"\n",
-    "DATA_PATH = \"/home/mouba/data/day.csv\"\n",
+    "DATA_PATH = \"~/data/day.csv\"\n",
     "EXPERIMENT_NAME = \"bike-sharing-regression\""
    ]
   },
