added prediction framework for flaskapp

--- a/app/training.ipynb
+++ b/app/training.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,11 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRACKING_SERVER_HOST = \"34.16.191.116\"\n",
+    "TRACKING_SERVER_HOST = \"34.125.75.97\"\n",
     "TRACKING_SERVER_PORT = \"5000\"\n",
     "DATA_PATH = \"~/data/day.csv\"\n",
     "EXPERIMENT_NAME = \"bike-sharing-regression\""
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "<Experiment: artifact_location='gs://mlflow-assignment-mj/bike-sharing-prediction/3', creation_time=1691221899736, experiment_id='3', last_update_time=1691221899736, lifecycle_stage='active', name='bike-sharing-regression', tags={}>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4121,7 +4121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4330,7 +4330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4339,7 +4339,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ModelVersion: aliases=[], creation_timestamp=1691521476418, current_stage='Archived', description='The model version 4 was transitioned to Production on 2023-08-08', last_updated_timestamp=1691522052092, name='random-forest-regressor', run_id='79934c79a98f4932aade316cce6e61a0', run_link='', source='gs://mlflow-assignment-mj/bike-sharing-prediction/3/79934c79a98f4932aade316cce6e61a0/artifacts/model', status='READY', status_message='', tags={}, user_id='', version='4'>,\n",
+       " <ModelVersion: aliases=[], creation_timestamp=1691522052069, current_stage='Production', description='The model version 5 was transitioned to Production on 2023-08-08', last_updated_timestamp=1691522052121, name='random-forest-regressor', run_id='79934c79a98f4932aade316cce6e61a0', run_link='', source='gs://mlflow-assignment-mj/bike-sharing-prediction/3/79934c79a98f4932aade316cce6e61a0/artifacts/model', status='READY', status_message='', tags={}, user_id='', version='5'>]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latest_versions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4348,17 +4369,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load model as a PyFuncModel.\n",
-    "loaded_model = mlflow.pyfunc.load_model(model_uri)"
+    "loaded_model = mlflow.pyfunc.load_model(prod_model_uri)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mlflow.pyfunc.loaded_model:\n",
+       "  artifact_path: model\n",
+       "  flavor: mlflow.sklearn\n",
+       "  run_id: 79934c79a98f4932aade316cce6e61a0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4379,18 +4423,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([2475.51869788])"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'loaded_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m loaded_model\u001b[39m.\u001b[39mpredict(bike_data)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'loaded_model' is not defined"
+     ]
     }
    ],
    "source": [
