--- a/app/training.ipynb
+++ b/app/training.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,6 +134,99 @@
     "    features = ['season', 'mnth', 'holiday', 'weekday', 'workingday', 'weathersit',\n",
     "                        'temp', 'atemp', 'hum', 'windspeed']\n",
     "    return df[features].to_dict(orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_data = [\n",
+    "    (1,0,1,0,6,0,2,0.344167,0.363625,0.805833,0.160446),\n",
+    "    (1,0,1,0,0,0,2,0.363478,0.353739,0.696087,0.248539),\n",
+    "    (1,0,1,0,1,1,1,0.196364,0.189405,0.437273,0.248309),\n",
+    "    (1,0,1,0,2,1,1,0.2,0.212122,0.590435,0.160296),\n",
+    "    (1,0,1,0,3,1,1,0.226957,0.22927,0.436957,0.1869),\n",
+    "    (1,0,1,0,4,1,1,0.204348,0.233209,0.518261,0.0895652),\n",
+    "    (2,0,1,0,5,1,2,0.196522,0.208839,0.498696,0.168726),\n",
+    "    (2,0,1,0,6,0,2,0.165,0.162254,0.535833,0.266804),\n",
+    "    (2,0,1,0,0,0,1,0.138333,0.116175,0.434167,0.36195),\n",
+    "    (2,0,1,0,1,1,1,0.150833,0.150888,0.482917,0.223267)\n",
+    "]\n",
+    "\n",
+    "input_columns = [\n",
+    "        \"season\",\n",
+    "        \"yr\",\n",
+    "        \"mnth\",\n",
+    "        \"holiday\",\n",
+    "        \"weekday\",\n",
+    "        \"workingday\",\n",
+    "        \"weathersit\",\n",
+    "        \"temp\",\n",
+    "        \"atemp\",\n",
+    "        \"hum\",\n",
+    "        \"windspeed\"\n",
+    "]\n",
+    "input_df = pd.DataFrame(input_data, columns=input_columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train, df_val = split_data(load_data(DATA_PATH))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(147, 11)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_val.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'season': 1,\n",
+       "  'mnth': 1,\n",
+       "  'holiday': 0,\n",
+       "  'weekday': 6,\n",
+       "  'workingday': 0,\n",
+       "  'weathersit': 2,\n",
+       "  'temp': 0.344167,\n",
+       "  'atemp': 0.363625,\n",
+       "  'hum': 0.805833,\n",
+       "  'windspeed': 0.160446}]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
    ]
   },
   {
